--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <body>
     <div class="input-area">
-      <input placeholder="TODOを入力" />
-      <button>追加</button>
+      <input id="add-text" placeholder="TODOを入力" />
+      <button id="add-button">追加</button>
     </div>
 
     <div class="imcomplete-area">
       <p class="title">未完了のToDo</p>
-      <ul>
+      <ul id="incomplete-list">
         <li>
           <div class="list-row">
             <p>ToDoです</p>
@@ -34,7 +34,7 @@
 
     <div class="complete-area">
       <p class="title">完了したToDo</p>
-      <ul>
+      <ul id="complete-list">
         <li>
           <div class="list-row">
             <p>ToDoでした</p>
